folder structure update

--- a/algoristics-be/Dockerfile
+++ b/algoristics-be/Dockerfile
@@ -1,18 +1,14 @@
 # Use an official Python runtime as a base image
 FROM python:3.9-slim
-
-# Install system dependencies required for PyMuPDF
-RUN apt-get update && apt-get install -y \
-    libgl1-mesa-glx \
-    libglib2.0-0 \
-    && apt-get clean
+ENV http_proxy="http://10.16.32.13:8080"
+ENV https_proxy="http://10.16.32.13:8080"
 
 # Set the working directory in the container
 WORKDIR /app
 
 # Install Python dependencies
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 # Copy the current directory contents into the container
 COPY . .
