--- a/algoristics-fe/package.json
+++ b/algoristics-fe/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "algoristics-team",
+  "name": "bidbridge-team",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/aos": "^3.0.7",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
