--- a/algoristics-fe/package.json
+++ b/algoristics-fe/package.json
@@ -19,7 +19,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "use-local-storage-state": "^19.5.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
